--- a/src/components/providers/locales/en.json
+++ b/src/components/providers/locales/en.json
@@ -9,6 +9,8 @@
     "link": "Full version",
     "share": "Share",
     "integrate": "Integrate",
+    "next-actions": "Go further",
+    "understand": "Understand data",
     "share-challenge": "Share challenge",
     "integrate-challenge": "Integrate challenge",
     "hypothesis": "Our hypothesis",
