--- a/src/components/providers/locales/fr.json
+++ b/src/components/providers/locales/fr.json
@@ -9,6 +9,8 @@
     "link": "Version complète",
     "share": "Partager",
     "integrate": "Intégrer",
+    "next-actions": "Aller plus loin",
+    "understand": "Comprendre les données",
     "share-challenge": "Partager le challenge",
     "integrate-challenge": "Intégrer le challenge",
     "hypothesis": "Nos hypothèses de calcul",
