--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -9,8 +9,8 @@
     "link": "Full version",
     "share": "Share",
     "integrate": "Integrate",
-    "next-actions": "Go further",
-    "understand": "Understand data",
+    "next-actions": "Explore further",
+    "understand": "Understanding data",
     "share-challenge": "Share challenge",
     "integrate-challenge": "Integrate challenge",
     "hypothesis": "Our hypothesis",
