feat: display all

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -71,6 +71,8 @@
     }
   },
   "transport": {
+    "displayAll": "See every transport modes",
+    "hideAll": "See only relevants transport modes",
     "carpool": {
       "see": "Show carpooling",
       "with": "With",
