--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -71,6 +71,8 @@
     }
   },
   "transport": {
+    "displayAll": "Voir tous les modes de transport",
+    "hideAll": "Voir uniquement les modes de transport pertinant",
     "carpool": {
       "see": "Afficher le covoiturage",
       "with": "Avec",
