--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -6,14 +6,10 @@
     "information-2": "Le module sera automatiquement mis à jour avec les dernières nouveautés."
   },
   "overscreen": {
-    "link": "Version complète",
     "share": "Partager",
     "integrate": "Intégrer",
     "next-actions": "Aller plus loin",
     "understand": "Comprendre les données",
-    "share-challenge": "Partager le challenge",
-    "integrate-challenge": "Intégrer le challenge",
-    "hypothesis": "Nos hypothèses de calcul",
     "download": "Télécharger",
     "m2": {
       "title": "Afficher une surface personnalisée"
@@ -21,6 +17,8 @@
     "km": {
       "title": "Afficher une distance personnalisée"
     },
+    "situation": "ma propre simulation",
+    "comparateur": "ma propre comparaison",
     "language": {
       "label": "Langue",
       "fr": "Français",
@@ -64,37 +62,9 @@
     }
   },
   "modal": {
-    "close": "Fermer",
-    "co2": {
-      "understand": "Comprendre",
-      "equivalent": "l'équivalent CO₂ (CO₂e)",
-      "intro": "Le dérèglement climatique actuel est une conséquence de nos émissions importantes de différents gaz à effet de serre. Nous pouvons mesurer ces émissions avec un indice simple : les kilogrammes d'équivalent CO₂ (kgCO₂e).",
-      "text": "Chaque gaz à effet de serre est ramené à un équivalent en CO₂ selon son pouvoir de réchauffement.",
-      "co2": "kg de CO₂",
-      "co2-impact": "alors l'impact total de ce",
-      "co2-value": "produit est de 29 kg de CO₂e",
-      "co2-equivalent": "équivalent CO₂",
-      "methane": "kg de méthane",
-      "methane-example": "ex. : si la fabrication d'un",
-      "methane-product": "produit émet",
-      "methane-comparison": "1kg de méthane + 1kg de CO₂"
-    },
-    "occupancy": {
-      "title": "Taux de remplissage des véhicules",
-      "intro": "L'impact de chaque véhicule est donné 'par personne', et non pas pour l'ensemble du véhicule.",
-      "pre-source": "Les taux de remplissage utilisés dans Mon Impact Transport sont ceux retenus dans la",
-      "source": "Base carbone de l'ADEME",
-      "post-source": "sauf pour les voitures (thermiques et électriques) pour lesquelles nous ne comptons qu'une seule personne dans le véhicule. Il est possible de moduler le nombre de personnes par voiture avec l'option \"Afficher le covoiturage\"."
-    }
+    "close": "Fermer"
   },
   "transport": {
-    "displayAll": "Voir tous les modes de transport",
-    "hideAll": "Afficher moins de modes de transport",
-    "carpool": {
-      "see": "Afficher le covoiturage",
-      "with": "Avec",
-      "carpooler": "covoitureur"
-    },
     "itineraire": {
       "header": "Découvrez la quantité de CO₂e que vous émettez pour ce trajet",
       "start": "Départ",
@@ -103,90 +73,121 @@
     "distance": {
       "header": "Découvrez la quantité de CO₂e que vous émettez pour cette distance"
     },
-    "teletravail": {
-      "start": "Lieu de domicile",
-      "end": "Lieu de travail",
-      "details": "Voir et ajuster les détails du calcul",
-      "choose": "Choisissez votre mode de transport",
-      "premise": "Présentiel",
-      "homeoffice": "Télétravail",
-      "days": "jours par semaine",
-      "emitted": "émis",
-      "on": "sur {day} jour",
-      "avoided": "évité{plural}",
-      "yearly": "à l'année",
-      "commute": "sur mes déplacements",
-      "disclaimer": "d'autres émissions ont peut-être augmenté",
-      "thats": "Soit",
-      "saved": "d'économisé sur mon empreinte carbone annuelle",
-      "precise": "Préciser ou calculer mon empreinte carbone"
-    },
-    "search": {
-      "header": "Découvrez la quantité de CO₂e que vous émettez",
-      "header-par-personne": "par personne",
-      "header-itineraire": "pour ce trajet",
-      "header-teletravail": "Découvrez la quantité de CO₂e que vous économisez (à l'année) en travaillant de chez vous",
-      "header-distance": "pour cette distance"
-    },
     "mode-selector": {
       "distance": "Distance",
       "itineraire": "Itinéraire",
       "teletravail": "Télétravail"
     }
   },
-  "form": {
-    "valider": "Valider"
+  "chauffage": {
+    "title": "Découvrez la quantité de CO₂e que vous émettez pour chauffer cette surface par an"
   },
-  "category": {
-    "list-header": "Cliquez sur un{gender} {name} pour voir le détail.",
-    "see-all": "Voir {gender} les {name}",
-    "equivalent": "équivalent[s]",
-    "equivalent-usagenumerique": "usage[s] numérique[s]",
-    "equivalent-livraison": "impact[s] livraison[s]",
-    "equivalent-chauffage": "mode[s] de chauffage",
-    "equivalent-transport": "mode[s] de transport",
-    "equivalent-fruitsetlegumes": "fruit[s] et légume[s]",
-    "equivalent-numerique": "appareil[s]",
-    "equivalent-repas": "repas",
-    "equivalent-habillement": "vêtement[s]",
-    "equivalent-mobilier": "meuble[s]",
-    "equivalent-electromenager": "appareil[s]",
-    "equivalent-boisson": "boisson[s]",
+  "flds": {
+    "label": "Découvres les fruits et légumes du mois de",
+    "title": "Découvrez l’impact carbone des fruits et légumes de saison pour ce mois"
+  },
+  "category-simulator": {
     "passenger": "passager[s]",
     "legend": {
       "construction": "Construction",
       "usage": "Usage"
     },
-    "bottom": {
-      "before": "Valeurs exprimées en kg",
-      "after": "émis",
-      "thematiques": "Voir toutes les thématiques",
-      "include-usagenumerique": "",
-      "include-livraison": "",
-      "include-chauffage": "par m² par année.",
-      "include-transport": "par personne en France. Sont incluses les émissions directes, la construction des véhicules (fabrication, maintenance et fin de vie) et la production et distribution de carburant et d'électricité. La construction des infrastructures (routes, rails, aéroports...) n'est pas incluse.",
-      "include-fruitsetlegumes": "par kg de produit pour des fruits et légumes de saison",
-      "include-numerique": "par produit comprenant la fabrication, la distribution et l'usage",
-      "include-repas": "par repas comprenant la fabrication, la distribution et la consommation.",
-      "include-habillement": "par produit comprenant la fabrication, la distribution et l'usage.",
-      "include-mobilier": "par produit comprenant la fabrication, la distribution et l'usage.",
-      "include-electromenager": "par produit comprenant la fabrication, la distribution et l'usage.",
-      "include-boisson": "par litre de produit comprenant la fabrication, la distribution et la consommation."
+    "vetement": {
+      "display": "Voir tous les vêtements",
+      "hide": "Voir seulement les vêtements principaux"
+    },
+    "appareils": {
+      "display": "Voir tous les appareils",
+      "hide": "Voir seulement les appareils principaux"
+    },
+    "transport": {
+      "display": "Voir tous les modes de transport",
+      "hide": "Afficher moins de modes de transport"
     }
   },
+  "comparateur": {
+    "title": "C’est autant d’émissions que pour fabriquer, consommer ou parcourir...",
+    "title-bis-1": "C'est",
+    "title-bis-2": "soit autant d’émissions que pour fabriquer, consommer ou parcourir...",
+    "detail": " Voir le détail",
+    "co2-unit": "kg de CO₂",
+    "generate": "Générer d'autres équivalents",
+    "modify": "Modifier mes équivalents",
+    "add": "Ajouter un équivalent",
+    "overscreen": {
+      "search": "Rechercher un objet, un geste...",
+      "back": "Revenir au comparateur",
+      "equivalents": "équivalents",
+      "no-result-1": "Aucun résultat ne correspond à votre recherche.",
+      "no-result-2": "Vous pouvez essayer d'autres termes ou",
+      "no-result-3": "retourner à la liste des équivalents",
+      "hide": "Cacher les éléments de la catégorie",
+      "show": "Voir les éléments de la catégorie",
+      "compare": "Comparer avec cette catégorie seulement",
+      "compare-button": "Voir la comparaison",
+      "max": "équivalents déjà sélectionnés"
+    }
+  },
+  "usage-numerique": {
+    "title": "Comparer l’impact des usages avec l’impact de la construction",
+    "description": "En général, la majorité de votre empreinte numérique provient de la construction de vos appareils et pas de l’usage de ces derniers.",
+    "usages": "VOS USAGES ÉMETTENT",
+    "or": "SOIT...",
+    "total": "CE QUI CORRESPOND À..",
+    "email-title": "Emails envoyés",
+    "visio-title": "Heures de visioconférence",
+    "streaming-title": "Heures de streaming",
+    "by-week": "par semaine",
+    "by-year": "par an",
+    "heure": "heure",
+    "email": "email",
+    "smartphone": "Smartphone",
+    "tablette": "Tablette",
+    "ordinateur portable": "Ordinateur portable",
+    "ordinateur et écran": "Ordinateur fixe",
+    "0075": "Sans pièce jointe",
+    "1075": "Pièce jointe 1Mo",
+    "5075": "Pièce jointe 5Mo",
+    "audio": "Audio",
+    "TV": "Télévision",
+    "SD": "Basse déf",
+    "HD": "Haute déf",
+    "ultra HD": "4K",
+    "fixe FR": "Wifi",
+    "mobile FR": "4G"
+  },
   "equivalent": {
+    "name-avion-pny": "Paris - New-York",
+    "subtitle-plane": "en avion",
+    "prefix-A/R ": "A/R ",
+    "name-tgv-paris-berlin": "Paris - Berlin",
+    "subtitle-tgv": "en TGV",
+    "name-tgv-paris-marseille": "Paris - Marseille",
+    "name-voiture-lille-nimes": "Lille - Nîmes",
+    "subtitle-car": "en voiture thermique",
+    "name-francais": "Empreinte carbone d'un citoyen Français",
+    "prefix-%l": "% de l'",
+    "name-game-of-thrones": "Épisode[s] de Game of thrones",
+    "subtitle-en streaming": "en streaming",
+    "name-friends": "Intégrale[s] de Friends",
     "name-eaudurobinet": "Eau du robinet",
+    "prefix-l'": "Litre[s] d'",
     "name-eauenbouteille": "Eau en bouteille",
     "name-soda": "Soda",
+    "prefix-le ": "Litre[s] de ",
     "name-biere": "Bière",
     "name-vin": "Vin",
     "name-laitdevache": "Lait",
+    "subtitle-vache": "De vache",
     "name-laitdesoja": "Lait",
+    "subtitle-soja": "De soja",
     "name-the": "Thé",
     "name-cafe": "Café",
     "name-fraise": "Fraise",
+    "prefix-kg de ": "kg de ",
     "name-pomme": "Pomme",
     "name-orange": "Orange",
+    "prefix-kg d'": "kg d'",
     "name-citron": "Citron",
     "name-ail": "Ail",
     "name-artichaut": "Artichaut",
@@ -207,8 +208,10 @@
     "name-endive": "Endive",
     "name-epinard": "Épinard",
     "name-mangue": "Mangue",
+    "subtitle-byplane": "Importée par avion",
     "name-fenouil": "Fenouil",
     "name-haricotvert": "Haricot vert",
+    "subtitle-cru": "cru",
     "name-laitue": "Laitue",
     "name-mache": "Mâche",
     "name-navet": "Navet",
@@ -261,39 +264,57 @@
     "name-pasteque": "Pastèque",
     "name-bouilloire": "Bouilloire[s]",
     "name-cafetieredosette": "Cafetière[s]",
+    "subtitle-pods": "À dosettes",
     "name-cafetierefiltre": "Cafetière[s]",
+    "subtitle-Filtre": "Filtre",
     "name-cafetiereexpresso": "Cafetière[s]",
+    "subtitle-Expresso": "Expresso",
     "name-fourelectrique": "Four",
+    "subtitle-Électrique": "Électrique",
     "name-lavevaisselle": "Lave-vaisselle",
     "name-lavelinge": "Lave-linge",
+    "subtitle-7kg": "7kg",
     "name-refrigirateur": "Réfrigérateur",
     "name-aspirateur": "Aspirateur",
     "name-climatiseur": "Climatiseur[s]",
     "name-jeans": "Jeans",
     "name-polo": "Polo[s]",
     "name-tshirtencoton": "T-shirt[s]",
+    "subtitle-En coton": "En coton",
     "name-tshirtenpolyester": "T-shirt[s]",
+    "subtitle-En polyester": "En polyester",
     "name-sweatencoton": "Sweat[s]",
     "name-chemiseencoton": "Chemise[s]",
     "name-chemiseenviscose": "Chemise[s]",
+    "subtitle-En viscose": "En viscose",
     "name-chaussuresencuir": "Paire[s] de chaussures",
+    "subtitle-En cuir": "En cuir",
     "name-chaussuresentissu": "Paire[s] de chaussures",
+    "subtitle-En tissu": "En tissu",
     "name-chaussuresdesport": "Paire[s] de chaussures",
+    "subtitle-De sport": "De sport",
     "name-robeencoton": "Robe[s]",
     "name-robeenpolyester": "Robe[s]",
     "name-robeenviscose": "Robe[s]",
     "name-pullenlaine": "Pull[s]",
+    "subtitle-En laine": "En laine",
     "name-pullenacrylique": "Pull[s]",
+    "subtitle-En acrylique": "En acrylique",
     "name-pullencotonrecycle": "Pull[s]",
+    "subtitle-En coton recyclé": "En coton recyclé",
     "name-manteau": "Manteau[x]",
     "name-vesteimpermeable": "Veste[s] imperméable[s]",
     "name-vestesimilicuir": "Veste[s] simili-cuir",
     "name-canapeconvertible": "Canapé[s]",
+    "subtitle-convertible": "Convertible[s]",
     "name-chaiseenbois": "Chaise[s]",
+    "subtitle-En bois": "En bois",
     "name-tableenbois": "Table[s]",
     "name-canapetextile": "Canapé[s]",
+    "subtitle-Textile": "Textile",
     "name-armoire": "Armoire",
     "name-lit": "Lit",
+    "subtitle-lit": "Cadre + sommier + matelas",
     "name-repasavecduboeuf": "Repas avec du boeuf",
     "name-repasvegetarien": "Repas végétarien[s]",
     "name-repasvegetalien": "Repas végétalien[s]",
@@ -301,36 +322,35 @@
     "name-repasavecdupoissongras": "Repas avec du poisson gras",
     "name-repasavecdupoulet": "Repas avec du poulet",
     "name-smartphone": "Smartphone[s]",
-    "name-ordinateurfixebureautique": "Ordinateur[s] fixe[s] sans écran",
-    "name-ordinateurfixeperformance": "Ordinateur[s] fixe[s] sans écran",
-    "name-ecran215pouces": "Écran[s]",
-    "name-ecran24pouces": "Écran[s]",
-    "name-tablettedetachable": "Tablette[s] détachable[s]",
+    "name-ordinateurfixeparticulier": "Ordinateur[s] fixe[s] sans écran (particulier)",
+    "name-ordinateurfixeprofessionnel": "Ordinateur[s] fixe[s] sans écran (professionnel)",
+    "name-ecran": "Écran[s] d'ordinateur",
     "name-tabletteclassique": "Tablette[s]",
-    "name-tablettemini": "Tablette[s]",
-    "name-chainehifi": "Chaine[s] hifi",
-    "name-liseuse": "Liseuse[s]",
     "name-television": "Télévision[s] ",
     "name-ordinateurportable": "Ordinateur[s] portable[s]",
-    "name-montreconnectee": "Montre[s] connectée[s]",
-    "name-cadrephotodigital": "Cadre[s] photo digital",
-    "name-homecinema": "Home cinéma",
-    "name-barredeson": "Barre[s] de son",
-    "name-modemfibre": "Modem[s]",
-    "name-enceintebluetooth": "Enceinte[s] bluetooth",
-    "name-consoledesalon": "Console[s] de salon",
-    "name-consoleportable": "Console[s] portable",
-    "name-appareilphotoreflex": "Appareil photo",
-    "name-appareilphotocompact": "Appareil photo",
-    "name-imprimantejetdencre": "Imprimante[s]",
+    "name-enceintebluetooth": "Enceinte[s] connectée[s]",
+    "name-telephonebasique": "Téléphone[s] basique[s]",
+    "name-casquevr": "Casque[s] de réalité virtuelle",
+    "name-alimentationordinateur": "Alimentation[s] externe[s]",
+    "subtitle-laptop": "pour ordinateur portable",
+    "name-alimentationsmartphone": "Alimentation[s] externe[s]",
+    "subtitle-smartphone": "pour smartphone ou tablette",
+    "name-disquedur": "Disque[s] dur[s] externe[s]",
+    "name-clefusb": "Clef[s] usb",
+    "name-box": "Box[s]",
     "name-avioncourtcourrier": "Avion",
+    "subtitle-Court courrier": "Court courrier",
+    "prefix-km en ": "km en ",
     "name-avionmoyencourrier": "Avion",
+    "subtitle-Moyen courrier": "Moyen courrier",
     "name-avionlongcourrier": "Avion",
+    "subtitle-Long courrier": "Long courrier",
     "name-tgv": "TGV",
     "name-intercites": "Intercités",
-    "name-covoiturage": "Covoiturage",
     "name-voiturethermique": "Voiture",
+    "subtitle-Moteur thermique": "Moteur thermique",
     "name-voitureelectrique": "Voiture",
+    "subtitle-Moteur électrique": "Moteur électrique",
     "name-autocar": "Autocar",
     "name-velo": "Vélo ou marche",
     "name-veloelectrique": "Vélo (ou trottinette) à assistance électrique",
@@ -343,8 +363,10 @@
     "name-ter": "TER",
     "name-buselectrique": "Bus",
     "name-busgnv": "Bus",
-    "name-avion-pny": "Paris - New-York",
+    "subtitle-GNV": "GNV",
     "name-chauffagegaz": "Chauffage au gaz",
+    "prefix-year": "année[s] de ",
+    "suffix-m2": " par m²",
     "name-chauffagefioul": "Chauffage au fioul",
     "name-chauffageelectrique": "Chauffage électrique",
     "name-pompeachaleur": "Chauffage avec une pompe à chaleur",
@@ -353,62 +375,26 @@
     "name-reseaudechaleur": "Chauffage via un réseau de chaleur",
     "name-email": "Email",
     "name-spam": "Spam",
+    "subtitle-Non lu": "Non lu",
     "name-stockagedonnee": "Stocker un Go de donnée",
+    "subtitle-Pendant 1 an": "Pendant 1 an",
     "name-rechercheweb": "Recherche[s] sur le web",
     "name-streamingvideo": "Streaming vidéo",
+    "prefix-hours": "Heure[s] de ",
     "name-visioconference": "Visioconférence",
-    "name-telechargement": "Go de donnée",
-    "subtitle-laitdevache": "De vache",
-    "subtitle-laitdesoja": "De soja",
-    "subtitle-mangue": "Importée par avion",
-    "subtitle-haricotvert": "cru",
-    "subtitle-cafetieredosette": "À dosettes",
-    "subtitle-cafetierefiltre": "Filtre",
-    "subtitle-cafetiereexpresso": "Expresso",
-    "subtitle-fourelectrique": "Électrique",
-    "subtitle-lavelinge": "7kg",
-    "subtitle-tshirtencoton": "En coton",
-    "subtitle-tshirtenpolyester": "En polyester",
-    "subtitle-sweatencoton": "En coton",
-    "subtitle-chemiseencoton": "En coton",
-    "subtitle-chemiseenviscose": "En viscose",
-    "subtitle-chaussuresencuir": "En cuir",
-    "subtitle-chaussuresentissu": "En tissu",
-    "subtitle-chaussuresdesport": "De sport",
-    "subtitle-robeencoton": "En coton",
-    "subtitle-robeenpolyester": "En polyester",
-    "subtitle-robeenviscose": "En viscose",
-    "subtitle-pullenlaine": "En laine",
-    "subtitle-pullenacrylique": "En acrylique",
-    "subtitle-pullencotonrecycle": "En coton recyclé",
-    "subtitle-canapeconvertible": "Convertible[s]",
-    "subtitle-chaiseenbois": "En bois",
-    "subtitle-tableenbois": "En bois",
-    "subtitle-canapetextile": "Textile",
-    "subtitle-lit": "Cadre + sommier + matelas",
-    "subtitle-smartphone": "> 5,5 pouces",
-    "subtitle-ordinateurfixebureautique": "Bureautique",
-    "subtitle-ordinateurfixeperformance": "Performance",
-    "subtitle-ecran215pouces": "21,5 pouces",
-    "subtitle-ecran24pouces": "24 pouces",
-    "subtitle-tabletteclassique": "Classique",
-    "subtitle-tablettemini": "Mini",
-    "subtitle-liseuse": "Non rétro-éclairé",
-    "subtitle-television": "40 - 49 pouces",
-    "subtitle-modemfibre": "Fibre",
-    "subtitle-appareilphotoreflex": "Reflex",
-    "subtitle-appareilphotocompact": "Compact",
-    "subtitle-imprimantejetdencre": "Jet d'encre",
-    "subtitle-avioncourtcourrier": "Court courrier",
-    "subtitle-avionmoyencourrier": "Moyen courrier",
-    "subtitle-avionlongcourrier": "Long courrier",
-    "subtitle-voiturethermique": "Moteur thermique",
-    "subtitle-voitureelectrique": "Moteur électrique",
-    "subtitle-busthermique": "Moteur thermique",
-    "subtitle-buselectrique": "Moteur électrique",
-    "subtitle-busgnv": "GNV",
-    "subtitle-avion-pny": "en avion",
-    "subtitle-spam": "Non lu",
-    "subtitle-stockagedonnee": "Pendant 1 an"
+    "name-telechargement": "Go de donnée"
+  },
+  "category": {
+    "name-caspratiques": "Cas pratiques",
+    "name-usagenumerique": "Usage numérique",
+    "name-chauffage": "Chauffage",
+    "name-transport": "Transport",
+    "name-fruitsetlegumes": "Fruits et légumes",
+    "name-numerique": "Numérique",
+    "name-repas": "Repas",
+    "name-habillement": "Habillement",
+    "name-mobilier": "Mobilier",
+    "name-electromenager": "Électroménager",
+    "name-boisson": "Boisson"
   }
 }
