--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -65,6 +65,7 @@
     "close": "Close"
   },
   "transport": {
+    "carpool": "Carpooling",
     "itineraire": {
       "header": "See how much CO₂e you emit for this itinary",
       "start": "From",
@@ -128,6 +129,39 @@
       "max": "equivalents already selected"
     }
   },
+  "livraison": {
+    "produit": "You order...",
+    "grande consommation": "Consumer products (food, groceries, drinks...)",
+    "habillement": "Clothing (clothes, shoes, accessories...)",
+    "culturel": "Cultural products (CDs, books, DVDs...)",
+    "équipements volumineux": "Furniture and large appliances",
+    "retrait": "That you have delivered to...",
+    "domicile": "Home delivery",
+    "point de retrait": "Pick-up point",
+    "click and collect": "Click & collect",
+    "point-de-retrait": "The pick-up point",
+    "click-and-collect": "Click & collect",
+    "trajet": "Is it on your usual route?",
+    "yes": "Yes",
+    "yes-plane": "Yes (air transport)",
+    "no": "No",
+    "km": "To go to the pick-up point, you travel...",
+    "voiture thermique": "By car",
+    "voiture électrique": "By electric car",
+    "marche": "On foot",
+    "vélo": "By bike",
+    "petit véhicule électrique": "By electric bike",
+    "commun": "By public transport",
+    "generate": "THE DELIVERY OF YOUR PACKAGE GENERATES",
+    "total": "THIS EQUALS..",
+    "mean": "On average, you place this type of order...",
+    "mean-unit": "times",
+    "1": "Per year",
+    "12": "Per month",
+    "52": "Per week",
+    "habits": "YOUR DELIVERY HABITS GENERATE",
+    "year": "Per year"
+  },
   "usage-numerique": {
     "title": "Compare the impact of your usages with the impact of construction",
     "description": "In most case, the majority of your digital footprint comes from the construction fo your digital devices, not from using them",
@@ -139,6 +173,9 @@
     "streaming-title": "streaming hours",
     "by-week": "per week",
     "by-year": "per year",
+    "email-year": "1 year of email",
+    "streaming-year": "1 year of streaming",
+    "visio-year": "1 year of visioconferences",
     "heure": "hour",
     "email": "email",
     "smartphone": "Smartphone",
