--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -207,6 +207,100 @@
     "neuf-description": "How many pairs of new shoes have you bought this year?",
     "total": "THIS EQUALS.."
   },
+  "equivalent": {
+    "hypotheses": "Hypotheses",
+    "fabrication": "Manufacturing",
+    "usage": "Usage",
+    "fdv": "End of life",
+    "usage-fdv": "Usage and end of life",
+    "total": "Total",
+    "Matières premières": "Raw materials",
+    "Approvisionnement": "Supply",
+    "hypothesis": {
+      "pre": {
+        "the": "We assume a cup of 250ml (simplified here to 250mg).",
+        "cafe": "We assume a cup of 250ml (simplified here to 250mg).",
+        "avion-pny": "Total distance traveled: 11600 km.",
+        "tgv-paris-berlin": "Total distance traveled: 2478 km.",
+        "tgv-paris-marseille": "Total distance traveled: 1504 km.",
+        "voiture-lille-nimes": "Total distance traveled: 1882 km.",
+        "avion-courtcourrier": "Average occupancy rate 101-220 passengers",
+        "avion-moyencourrier": "Average occupancy rate 101-220 passengers",
+        "avion-longcourrier": "Average occupancy rate 101-220 passengers",
+        "laveling": "Capacity 7kg.",
+        "mangue": "Imported by air.",
+        "lit": "Frame + box spring + mattress",
+        "smartphone": "Average screen size of 6.63 inches, a mix of LCD and OLED technologies, 8GB RAM, 210GB memory (weighted mix of 3 configurations, 24%, 24%, 52%). Average usage of a personal and professional smartphone.",
+        "ordinateurfixeparticulier": "1 CPU, 10GB RAM, 1173GB HDD, 442GB SSD, mix of integrated or separate graphics card (weighted mix of 5 configurations of desktop computers without screen, for personal use).",
+        "ordinateurfixeprofessionnel": "1 CPU, 8GB RAM, 1000GB HDD, 250GB SSD, separate graphics card (a simple configuration).",
+        "ecran": "Average size (24 inches) and mix of technologies (98.6% LCD, 1.4% OLED) (weighted mix of 2 computer screen configurations).",
+        "tabletteclassique": "10.53-inch screen, mix of LCD screen technologies, 4.7GB RAM, 144GB memory (weighted mix of 3 tablet configurations). Average usage of a personal and professional tablet.",
+        "television": "Average size and technology (82% LCD (45 inches), 1% OLED (53 inches), 17% OLED (68 inches)) (weighted mix of 3 television configurations).",
+        "ordinateurportable": "Average size and technology (82% LCD (45 inches), 1% OLED (53 inches), 17% OLED (68 inches)) (weighted mix of 3 television configurations).",
+        "casquevr": "Average of two technologies (50% LCD, 50% OLED) + includes two controllers.",
+        "clefusb": "Average capacity (16GB).",
+        "box": "Personal and professional use; xDSL, FTTx.",
+        "spam": "Unread.",
+        "stockagedonnee": "For 1 year."
+      },
+      "post": {
+        "avion-pny": "Includes direct emissions, vehicle construction (manufacturing, maintenance, and end of life), and the production and distribution of fuel and electricity. Infrastructure construction (roads, rails, airports, etc.) is not included.",
+        "tgv-paris-berlin": "Includes direct emissions, vehicle construction (manufacturing, maintenance, and end of life), and the production and distribution of fuel and electricity. Infrastructure construction (roads, rails, airports, etc.) is not included.",
+        "tgv-paris-marseille": "Includes direct emissions, vehicle construction (manufacturing, maintenance, and end of life), and the production and distribution of fuel and electricity. Infrastructure construction (roads, rails, airports, etc.) is not included.",
+        "voiture-lille-nimes": "Includes direct emissions, vehicle construction (manufacturing, maintenance, and end of life), and the production and distribution of fuel and electricity. Infrastructure construction (roads, rails, airports, etc.) is not included.",
+        "francais": "The French emit an average of 9.3 tons of CO₂e per year (data from the Statistical Data and Studies Service for 2022, Ministry of Ecological Transition). This average varies greatly depending on lifestyles, use of car or plane, living in a house or apartment, heating mode, diet, etc.",
+        "game-of-thrones": "An episode of Game of Thrones lasts an average of 1 hour. The data is calculated for one hour of high-definition streaming, on a television, over a wifi connection.",
+        "friends": "The entire Friends series consists of 236 episodes of about 20 minutes each. The data is calculated for one hour of high-definition streaming, on a television, over a wifi connection."
+      }
+    },
+    "usage-numerique": {
+      "appareil": "Device",
+      "used": "used",
+      "take": "Take into account",
+      "construction": "the construction?",
+      "yes": "Yes",
+      "no": "No",
+      "email-mainTitle": "Drafting duration",
+      "visio-mainTitle": "Hours of videoconferencing",
+      "streaming-mainTitle": "Hours of streaming",
+      "email-mainUnit": "minute",
+      "visio-mainUnit": "hour",
+      "streaming-mainUnit": "hour",
+      "email-secondUnit": "person",
+      "visio-secondUnit": "participant",
+      "email-title": "emails sent",
+      "visio-title": "hours of videoconferencing",
+      "streaming-title": "hours of streaming",
+      "email-secondTitle": "Number of recipients",
+      "visio-secondTitle": "Number of participants"
+    },
+    "ecv": {
+      "1": "Raw materials",
+      "2": "Supply",
+      "3": "Shaping",
+      "4": "Assembly and distribution",
+      "5": "Construction",
+      "6": "Fuel",
+      "7": "Contrail",
+      "8": "Usage",
+      "9": "End of life",
+      "30": "Agriculture",
+      "31": "Processing",
+      "32": "Packaging",
+      "33": "Transport",
+      "34": "Supermarket and distribution",
+      "35": "Consumption",
+      "13": "Terminal construction",
+      "14": "Terminal usage",
+      "15": "Transmission",
+      "16": "Data-center construction",
+      "17": "Data-center usage",
+      "40": "Terminal construction",
+      "41": "Terminal usage",
+      "42": "Transmission",
+      "43": "Data-centers"
+    }
+  },
   "category": {
     "name-caspratiques": "Use cases",
     "name-usagenumerique": "Digital usages",
