--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -207,6 +207,100 @@
     "neuf-description": "Combien de paires de chaussures neuves avez-vous acheté cette année ?",
     "total": "SOIT AUTANT D’ÉMISSIONS QUE..."
   },
+  "equivalent": {
+    "hypotheses": "Hypothèses",
+    "fabrication": "Fabrication",
+    "usage": "Usage",
+    "fdv": "Fin de vie",
+    "usage-fdv": "Usage et fin de vie",
+    "total": "Total",
+    "Matières premières": "Matières premières",
+    "Approvisionnement": "Approvisionnement",
+    "hypothesis": {
+      "pre": {
+        "the": "Nous prenons pour hypothèse une tasse de 250ml  (simplifié ici en 250mg).",
+        "cafe": "Nous prenons pour hypothèse une tasse de 250ml  (simplifié ici en 250mg).",
+        "avion-pny": "Distance totale parcourue : 11600 km.",
+        "tgv-paris-berlin": "Distance totale parcourue : 2478 km.",
+        "tgv-paris-marseille": "Distance totale parcourue : 1504 km.",
+        "voiture-lille-nimes": "Distance totale parcourue : 1882 km.",
+        "avion-courtcourrier": "Taux de remplissage moyen 101-220 passagers",
+        "avion-moyencourrier": "Taux de remplissage moyen 101-220 passagers",
+        "avion-longcourrier": "Taux de remplissage moyen 101-220 passagers",
+        "laveling": "Capacité 7kg.",
+        "mangue": "Importée par avion.",
+        "lit": "Cadre + sommier + matelas",
+        "smartphone": "Écran  moyen de 6,63 pouces, mix des technologies LCD et OLED, 8 Go de RAM, 210 Go de mémoire (mix pondéré entre 3 configurations, 24%, 24%, 52%). Moyenne des usages d'un smartphone personnel et professionnel.",
+        "ordinateurfixeparticulier": "1 CPU, 10 Go de RAM, 1173 Go de HDD, 442 Go de SSD, mix de carte graphique intégrée ou séparée (mix pondéré entre 5 configurations d’ordinateurs fixes sans écran, à usage particulier.).",
+        "ordinateurfixeprofessionnel": "1 CPU, 8 Go de RAM, 1000 Go de HDD, 250 Go de SSD, carte graphique séparée (une configuration simple).",
+        "ecran": "Dimension moyenne (24 pouces) et mix de technologies (98,6% LCD, 1,4% OLED) (mix pondéré entre 2 configurations d’écrans d’ordinateur.).",
+        "tabletteclassique": "Écran de 10,53 pouces, mix de technologies d'écran LCD, 4,7 Go de RAM, 144 Go de mémoire (mix pondéré entre 3 configurations de tablettes.). Moyenne des usages d'une tablette personnelle et professionnelle",
+        "television": "Dimension et technologie moyennes (82% LCD (45 pouces), 1% OLED (53 pouces), 17% OLED (68 pouces)) (mix pondéré entre 3 configurations de téléviseurs.).",
+        "ordinateurportable": "Dimension et technologie moyennes (82% LCD (45 pouces), 1% OLED (53 pouces), 17% OLED (68 pouces)) (mix pondéré entre 3 configurations de téléviseurs.).",
+        "casquevr": "Moyenne de deux technologies (50% LCD, 50% OLED) + prise en compte de deux manettes.",
+        "clefusb": "Capacité moyenne (16 Go).",
+        "box": "Utilisation personnelle et professionnelle ; xDSL, FTTx.",
+        "spam": "Non lu.",
+        "stockagedonnee": "Pendant 1 an."
+      },
+      "post": {
+        "avion-pny": "Sont incluses les émissions directes, la construction des véhicules (fabrication, maintenance et fin de vie) et la production et distribution de carburant et d'électricité. La construction des infrastructures (routes, rails, aéroports...) n'est pas incluse.",
+        "tgv-paris-berlin": "Sont incluses les émissions directes, la construction des véhicules (fabrication, maintenance et fin de vie) et la production et distribution de carburant et d'électricité. La construction des infrastructures (routes, rails, aéroports...) n'est pas incluse.",
+        "tgv-paris-marseille": "Sont incluses les émissions directes, la construction des véhicules (fabrication, maintenance et fin de vie) et la production et distribution de carburant et d'électricité. La construction des infrastructures (routes, rails, aéroports...) n'est pas incluse.",
+        "voiture-lille-nimes": "Sont incluses les émissions directes, la construction des véhicules (fabrication, maintenance et fin de vie) et la production et distribution de carburant et d'électricité. La construction des infrastructures (routes, rails, aéroports...) n'est pas incluse.",
+        "francais": "Les français émettent en moyenne 9,3 tonnes de CO₂e par an (chiffre du Service des Données et Études Statistiques pour 2022, Ministère de la Transition Écologique). Cette moyenne varie beaucoup selon les modes de vie, l’utilisation ou non de la voiture, de l’avion, la vie en maison ou en appartement, le mode de chauffage, l’alimentation etc.",
+        "game-of-thrones": "Un épisode de Game of thrones dure en moyenne 1h. La donnée est calculé sur une heure de streaming en haute définition, sur une télévision, en connexion wifi.",
+        "friends": "L’intégrale de Friends est composée de 236 épisodes d'environ 20min. La donnée est calculé sur une heure de streaming en haute définition, sur une télévision, en connexion wifi."
+      }
+    },
+    "usage-numerique": {
+      "appareil": "Appareil",
+      "used": "utilisé",
+      "take": "Prendre en compte",
+      "construction": "la construction ?",
+      "yes": "Oui",
+      "no": "Non",
+      "email-mainTitle": "Durée de la rédaction",
+      "visio-mainTitle": "Heures de visioconférence",
+      "streaming-mainTitle": "Heures de streaming",
+      "email-mainUnit": "minute",
+      "visio-mainUnit": "heure",
+      "streaming-mainUnit": "heure",
+      "email-secondUnit": "personne",
+      "visio-secondUnit": "participant",
+      "email-title": "emails envoyés",
+      "visio-title": "heures de visioconférence",
+      "streaming-title": "heures de streaming",
+      "email-secondTitle": "Nombre de destinataires",
+      "visio-secondTitle": "Nombre de participants"
+    },
+    "ecv": {
+      "1": "Matières premières",
+      "2": "Approvisionnement",
+      "3": "Mise en forme",
+      "4": "Assemblage et distribution",
+      "5": "Construction",
+      "6": "Carburant",
+      "7": "Trainées de condensation",
+      "8": "Usage",
+      "9": "Fin de vie",
+      "30": "Agriculture",
+      "31": "Transformation",
+      "32": "Emballage",
+      "33": "Transport",
+      "34": "Supermarché et distribution",
+      "35": "Consommation",
+      "13": "Construction des terminaux",
+      "14": "Usage des terminaux",
+      "15": "Transmission",
+      "16": "Construction des data-centers",
+      "17": "Usage des data-centers",
+      "40": "Construction des terminaux",
+      "41": "Usage des terminaux",
+      "42": "Transmission",
+      "43": "Data-centers"
+    }
+  },
   "category": {
     "name-caspratiques": "Cas pratiques",
     "name-usagenumerique": "Usage numérique",
